Add advanced query endpoint
